# chat-teacher

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  template.env
config/: __init__.py  environment.py
controllers/: __init__.py  agent.py  chat.py
databases/: __init__.py  sessions.py
prompts/: __init__.py  agent_template.py
public/src/css/: style.css
public/src/js/: index.js
public/templates/: index.html
public/templates/components/: footer.html  header.html
public/templates/fragments/: message_agent.html  message_user.html  modal_history.html  modal_save.html
schemas/: __init__.py  api.py  chat.py
server/: routes.py
